[project]
name = "pytools"
version = "0.1"
description = "Python port of https://github.com/moojor224/jstools"
readme = "README.md"
requires-python = ">=2.7"
authors = [{name = "moojor224"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/moojor224/pytools"
Changelog = "https://github.com/moojor224/pytools/releases"
Issues = "https://github.com/moojor224/pytools/issues"
CI = "https://github.com/moojor224/pytools/actions"


[project.optional-dependencies]
test = ["pytest"]

[tool.distutils.bdist_wheel]
universal = true